# system-design-wiki

./: .gitignore  CLAUDE.md  README.md  index.md  log.md
.obsidian/: workspace.json
docs/plans/: 2026-05-19-llm-wiki-setup.md  2026-05-24-knot-cycle-0-foundation.md  2026-05-24-knot-cycle-1-token-bucket.md  2026-05-24-knot-cycle-2-fixed-window.md  2026-05-24-knot-cycle-3-sliding-window-log.md  (+3 more)
experiments/knot/: .gitignore  DESIGN.md  README.md  docker-compose.yml  pyproject.toml  rules.yaml
experiments/knot/app/: main.py  middleware.py  redis_client.py  rules.py
experiments/knot/app/limiter/: always_allow.py  base.py  fixed_window.py  registry.py  sliding_window_log.py  token_bucket.py
experiments/knot/app/limiter/scripts/: fixed_window.lua  sliding_window_log.lua  token_bucket.lua
experiments/knot/client/: base.py  naive.py  sdk.py
experiments/knot/load/: fixed_window_boundary.k6.js  sliding_window_log.k6.js  token_bucket.k6.js
experiments/knot/reports/: client_comparison.md  fixed_window.md  sliding_window_log.md  token_bucket.md
experiments/knot/scripts/: compare_clients.py  report.py
experiments/knot/tests/: conftest.py
experiments/knot/tests/integration/: test_hard_soft_e2e.py  test_healthz.py  test_middleware_e2e.py  test_multidim_e2e.py  test_sliding_window_log_redis.py  test_token_bucket_redis.py
experiments/knot/tests/unit/: test_always_allow.py  test_fixed_window.py  test_knot_client.py  test_middleware_mode.py  test_registry.py  test_rules.py  test_rules_multidim.py  test_rules_reload.py  test_sliding_window_log.py  test_token_bucket.py
(+92 files in other folders)
