[project]
name = "knot"
version = "0.0.0"
description = "URL shortener mock for ch04 rate limiter learning experiments"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "redis>=5.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "fakeredis>=2.21",
    "freezegun>=1.4",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "lupa>=2.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
